-implemented simple role-based authorization for all department pages -added more role-based dynamic navigation elements -added dev names and uwids in footer -added custom script file

--- a/web/resources/styles/custom.css
+++ b/web/resources/styles/custom.css
@@ -12,6 +12,10 @@ and open the template in the editor.
     background-color: #F5F5F5;
 }
 
-#copyright {
+#credits {
     margin: 20px 0;
+}
+
+.capitalize {
+    text-transform: capitalize;
 }
