--- a/web/resources/styles/custom.css
+++ b/web/resources/styles/custom.css
@@ -12,6 +12,11 @@ and open the template in the editor.
     background-color: #F5F5F5;
 }
 
+body { 
+    padding-bottom: 70px; 
+}
+
+
 #credits {
     margin: 20px 0;
 }
