--- a/web/resources/styles/custom.css
+++ b/web/resources/styles/custom.css
@@ -8,6 +8,14 @@ and open the template in the editor.
     Author     : Lewis
 */
 
+
+/* remove outline around tab links on firefox */
+.nav-tabs > .active > a, 
+.nav-tabs > .active > a:hover,
+.nav-tabs > .active > a:focus {
+    outline:none;
+}
+
 #footer {
     background-color: #F5F5F5;
 }
@@ -15,7 +23,6 @@ and open the template in the editor.
 body { 
     padding-bottom: 70px; 
 }
-
 
 #credits {
     margin: 20px 0;
