--- a/web/resources/styles/custom.css
+++ b/web/resources/styles/custom.css
@@ -16,6 +16,15 @@ and open the template in the editor.
     outline:none;
 }
 
+.searchbar {
+    float:left;
+    margin-left: 10px; 
+}
+
+th.tablesorter-header {   
+    cursor: pointer;
+} 
+
 #footer {
     background-color: #F5F5F5;
 }
