-added a few more styling refinements -moved doctor patient records button to new tab

--- a/web/resources/styles/custom.css
+++ b/web/resources/styles/custom.css
@@ -51,3 +51,12 @@ body {
     top: 70px;
     right: 10px;
 }
+
+.btn-standalone {
+    display: block;
+    margin: 20px;
+}
+
+.form-standalone {
+    margin: 20px;
+}
